レシピ元ネタURLを訂正

--- a/たまねぎとパプリカのまぜ丼.md
+++ b/たまねぎとパプリカのまぜ丼.md
@@ -7,7 +7,7 @@
 
 ## 元ネタ
 
-[Exciteレシピ](https://matome.naver.jp/odai/2139014674723492601/2139015003624800103)
+[Exciteレシピ](https://erecipe.woman.excite.co.jp/detail/3cfeb80df92b3a030592ab032678971d.html)
 
 ## 食材(1人前)
 - 合い挽き肉：100g前後
