トッピング例を追加

--- a/炒り卵入り野菜炒め.md
+++ b/炒り卵入り野菜炒め.md
@@ -38,6 +38,12 @@
 1. その上にたまごを割り入れ、固まる前にかき混ぜて炒り卵にする
 1. たまごが固まったら皿によそう
 
+## トッピング例
+
+* かたくり粉
+  * 使う場合、オイスターソースと水を以下の分量で配合するとちょうど良い
+  * オイスターソース：小さじ2、水小さじ5、かたくり粉：小さじ2 をかき混ぜて投入
+
 ## おまけ
 
 5g程度の水溶き片栗粉を加えて混ぜても悪くないです(その場合、オイスターソースを少し増やします)。
