markdown lintに伴う修正

--- a/いつもの朝ご飯.md
+++ b/いつもの朝ご飯.md
@@ -5,6 +5,7 @@
 ![調理写真](いつもの朝ご飯.jpg)
 
 ## 調理時間
+
 20分前後
 
 ## 元ネタ
@@ -12,17 +13,20 @@
 なし
 
 ## 食材(1人前)
-- 冷凍惣菜など(冷凍白身魚のフライ・冷凍コロッケ・味つき鶏肉など)
-- たまご：一つ
-- サラダミックス：四分の一袋
-- プチトマト(オプション)：2，3個
+
+* 冷凍惣菜など(冷凍白身魚のフライ・冷凍コロッケ・味つき鶏肉など)
+* たまご：一つ
+* サラダミックス：四分の一袋
+* プチトマト(オプション)：2，3個
 
 ## 調味料
-- サラダ油
-- 塩こしょう
+
+* サラダ油
+* 塩こしょう
 
 ## 調理機材
-- フライパン
+
+* フライパン
 
 ## 手順
 
