--- a/炒り卵入り野菜炒め.md
+++ b/炒り卵入り野菜炒め.md
@@ -5,6 +5,7 @@
 ![調理写真](炒り卵入り野菜炒め.jpg)
 
 ## 調理時間
+
 15分前後
 
 ## 元ネタ
@@ -12,17 +13,20 @@
 なし
 
 ## 食材(1人前)
-- コンビニの炒め野菜セット：二分の一袋
-- 豚肉：100g前後
-- たまご：一つ
+
+* コンビニの炒め野菜セット：二分の一袋
+* 豚肉：100g前後
+* たまご：一つ
 
 ## 調味料
-- サラダ油
-- オイスターソース
-- 塩こしょう
+
+* サラダ油
+* オイスターソース
+* 塩こしょう
 
 ## 調理機材
-- フライパン
+
+* フライパン
 
 ## 手順
 
