--- a/豚ロース肉のステーキ.md
+++ b/豚ロース肉のステーキ.md
@@ -3,34 +3,38 @@
 ![調理写真](豚ロース肉のステーキ.jpg)
 
 ## 調理時間
+
 10分程度
 
 ## 元ネタ
 
 忘れました
 
-## 食材(1人前)
-- 豚ロース肉：一枚
-- コンビニサラダミックス：2分の1袋
-- バター：ひとかけ
+## 食材(1人
+
+* 豚ロース肉：一枚
+* コンビニサラダミックス：2分の1袋
+* バター：ひとかけ
 
 ## 調味料
-- 塩こしょう：少々
-- 料理酒：70cc
-- 醤油：10cc
-- サラダ油
-- にんにくペースト：少々
+
+* 塩こしょう：少々
+* 料理酒：70cc
+* 醤油：10cc
+* サラダ油
+* にんにくペースト：少々
 
 ## 調理機材
-- フライパン
-- まないたと包丁(or キッチンばさみ)
+
+* フライパン
+* まないたと包丁(or キッチンばさみ)
 
 ## 手順
 
 ### 下準備
 
-- 豚ロース肉を筋切りする(キッチンばさみだけでやれば、洗い物を少なくできます)
-- 料理酒と醤油をまぜておく
+* 豚ロース肉を筋切りする(キッチンばさみだけでやれば、洗い物を少なくできます)
+* 料理酒と醤油をまぜておく
 
 ### 調理手順
 
