--- a/豚肉うどん.md
+++ b/豚肉うどん.md
@@ -7,6 +7,7 @@
 ![調理写真](豚肉うどん.jpg)
 
 ## 調理時間
+
 20分前後
 
 ## 元ネタ
@@ -14,29 +15,32 @@
 なし
 
 ## 食材(1人前)
-- 小松菜：1～2株
-- たまねぎ：四分の一玉
-- 豚肉：90g前後
-- 冷凍うどん：一つ
-- つゆ(もう少し薄味にした方が良いかも。調整中)
-  - 水：300ml
-  - 白だし：30ml
-  - みりん：10ml
-  - 醤油：2，3滴
-  - ごま油：2, 3滴
+
+* 小松菜：1～2株
+* たまねぎ：四分の一玉
+* 豚肉：90g前後
+* 冷凍うどん：一つ
+* つゆ(もう少し薄味にした方が良いかも。調整中)
+  * 水：300ml
+  * 白だし：30ml
+  * みりん：10ml
+  * 醤油：2，3滴
+  * ごま油：2, 3滴
 
 ## 調味料
-- サラダ油
+
+* サラダ油
 
 ## 調理機材
-- 鍋
+
+* 鍋
 
 ## 手順
 
 ### 前準備
 
-- 小松菜を2, 3cmほどの長さに切る
-- たまねぎを千切りにする
+* 小松菜を2, 3cmほどの長さに切る
+* たまねぎを千切りにする
 
 ### 調理手順
 
@@ -50,5 +54,5 @@
 
 合いそうなトッピング案
 
-- ほぐした梅干し
-- レモン汁
+* ほぐした梅干し
+* レモン汁
