--- a/たまねぎとパプリカのまぜ丼.md
+++ b/たまねぎとパプリカのまぜ丼.md
@@ -3,6 +3,7 @@
 ![調理写真](たまねぎとパプリカのまぜ丼.jpg)
 
 ## 調理時間
+
 40分くらい
 
 ## 元ネタ
@@ -10,29 +11,32 @@
 [Exciteレシピ](https://erecipe.woman.excite.co.jp/detail/3cfeb80df92b3a030592ab032678971d.html)
 
 ## 食材(1人前)
-- 合い挽き肉：100g前後
-- パプリカ：2分の1個(赤黄両方使う場合は4分の1個ずつ)
-- ピーマン：一個 or ネギ：一本
-- たまねぎ：4分の1個
-- たまご：一個
+
+* 合い挽き肉：100g前後
+* パプリカ：2分の1個(赤黄両方使う場合は4分の1個ずつ)
+* ピーマン：一個 or ネギ：一本
+* たまねぎ：4分の1個
+* たまご：一個
 
 ## 調味料
-- サラダ油
-- 塩こしょう
-- 料理酒：小さじ二杯
-- オイスターソース：小さじ二杯
+
+* サラダ油
+* 塩こしょう
+* 料理酒：小さじ二杯
+* オイスターソース：小さじ二杯
 
 ## 調理機材
-- フライパン
-- フライ返し
-- まないた
-- 包丁
+
+* フライパン
+* フライ返し
+* まないた
+* 包丁
 
 ## 手順
 
 ### 下準備
 
-- パプリカ・たまねぎ・ピーマン(またはネギ)を千切り。パプリカとピーマンはへたを取っておくと良いです
+* パプリカ・たまねぎ・ピーマン(またはネギ)を千切り。パプリカとピーマンはへたを取っておくと良いです
 
 ### 調理手順
 
@@ -46,5 +50,4 @@
 
 ## トッピング案
 
-- しめじ(かなり量が増えるので二人前以上のときに？)
-
+* しめじ(かなり量が増えるので二人前以上のときに？)
