記入を忘れていたかたくり粉を追加

--- a/親子汁のうどん.md
+++ b/親子汁のうどん.md
@@ -24,7 +24,7 @@
 
 ## 調味料
 
-ほかにはなし
+* かたくり粉：10g
 
 ## 調理機材
 
@@ -38,7 +38,8 @@
 
 * 小松菜を2, 3センチ幅に切る
 * たまねぎを千切りにする
-* たまごを溶いておく
+* 鶏肉にかたくり粉をまぶす
+* たまごを溶いておく(鶏肉を鍋に入れたあとのボウルを使うと、ボウルを節約可能)
 * 鶏肉を一口大のサイズに切り分けておく
 
 ### 調理手順
