コミット漏れ

--- a/メインおかず/合い挽き肉とキャベツの回鍋肉風炒め.md
+++ b/メインおかず/合い挽き肉とキャベツの回鍋肉風炒め.md
@@ -45,7 +45,8 @@
 
 1. 中火で温めたフライパンに、ごま油を敷いて、合い挽き肉を入れ、炒める
 2. 合い挽き肉の色が変わってきたら、キャベツと長ネギを加え、かき混ぜながら炒める。
-3. 調味料を加え、かき混ぜて馴染ませる。馴染んだら火を止め、できあがり
+3. 調味料を加え、かき混ぜて馴染ませる。
+4. 馴染んだら火を止め、できあがり
 
 ## その他
 
