つゆの配合を更新

--- a/メインおかず/たまねぎとひき肉の卵とじ.md
+++ b/メインおかず/たまねぎとひき肉の卵とじ.md
@@ -1,4 +1,4 @@
-# たまねぎとひき肉の卵とじ(α)
+# たまねぎとひき肉の卵とじ
 
 ![調理写真](たまねぎとひき肉の卵とじ.jpg)
 
@@ -8,18 +8,17 @@
 
 ## 元ネタ
 
-* [トマトとふわふわ卵のマヨソテー \| とっておきレシピ \| キユーピー](https://www.kewpie.co.jp/recipes/recipe/QP00010931/)
+* [玉ねぎとひき肉の卵とじのレシピ・作り方｜【味の素パーク】の料理・レシピサイト‐レシピ大百科 : 玉ねぎや豚ひき肉を使った料理](https://park.ajinomoto.co.jp/recipe/card/700649/)
 
 ## 食材(1人前)
 
-* 合い挽き肉：100g前後(豚ひき肉のほうがいいかも)
+* 豚挽き肉：100g前後(合い挽き肉は合わない)
 * たまねぎ：4分の1個
 * つゆ
-  * 水：200ml(100mlのほうがよい？)
+  * 水：100ml
   * ほんだし：少々
   * 醤油：10ml
   * 砂糖：少々
-  * 塩：少々
 * 卵：1個
 
 ## 調味料
@@ -46,3 +45,7 @@
 2. 沸騰してきたらひき肉を加える
 3. あくが出てきたら、あくを取り、たまねぎを加える
 4. たまねぎがしんなりしてきたら、溶き卵を回し入れ、すこしかたまってきたら皿によそってできあがり
+
+## そのほか
+
+どんぶりにしてもおいしい。その場合つゆの量は少し増やした方が良い。
